[gd_scene load_steps=2 format=3 uid="uid://b7thk48hdxs7l"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_g2ak3"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_g2ak3")

[node name="Background" type="ColorRect" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.196078)

[node name="MenuContainer" type="VBoxContainer" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MenuContainer"]
process_mode = 3
layout_mode = 2
text = "YOU DIED"
horizontal_alignment = 1

[node name="TryAgainButton" type="Button" parent="MenuContainer"]
process_mode = 3
layout_mode = 2
text = "TRY AGAIN"

[node name="MainMenuButton" type="Button" parent="MenuContainer"]
process_mode = 3
layout_mode = 2
text = "MAIN MENU"
